<resources>

    <plurals name="age">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <string name="app_name">Adoptme</string>

    <string name="written_by">Raúl R.C</string>

    <string name="client_id">711373374956-kl3t6dgev9kddi37lktguvlulfevqh5q.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="by_signing_up_you_agree_to_our_tos_and_privacy_policy">by signing up you agree to our ToS and Privacy Policy</string>


    <string name="loading">Loading</string>
    <string name="menu_people">Personal data</string>
    <string name="menu_term">Terms &amp; Condition</string>
    <string name="menu_copyleft">License</string>
    <string name="menu_changelog">Changelog</string>

    <string name="menu_logout">Logout</string>

    <string name="hi">Hi</string>
    <string name="personal_data_name">Name</string>
    <string name="personal_data_email">Email</string>
    <string name="personal_data_about_me">About me</string>
    <string name="personal_data_postal_code">Postal code</string>
    <string name="personal_data_gender">Gender</string>
    <string name="personal_data_delete_user_title">If you want to delete your account and all associated data, click on the following link</string>
    <string name="personal_data_delete_user_link">Delete my adoptme account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="personal_data_title">Personal data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="discovery">Discovery</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="other">Other</string>
    <string name="rabbit">Rabbit</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="kind_of_animal">Kind of animal</string>
    <string name="sex">Sex</string>
    <string name="information">Information</string>
    <string name="save">save</string>
    <string name="photos">Photos</string>
    <string name="addOk">Ad successfully posted</string>
    <string name="see_all">See all</string>
    <string name="last_dogs">Last dogs</string>
    <string name="last_others_animal">Last other animals</string>
    <string name="last_rabbits">Last rabbits</string>
    <string name="last_cats">Last cats</string>
    <string name="send_me_a_message">Send me a message</string>


    <string name="quit_animal">Remove ad</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>


</resources>
