<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.add.AddActivity">

        <include
            android:id="@+id/myToolbar"
            layout="@layout/view_toolbar"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tittle0"
            style="@style/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/photos"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rvPhotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle0">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintEnd_toStartOf="@id/image2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:minWidth="64dp"
                    android:minHeight="64dp"
                    android:tint="@color/lightGrey"
                    app:srcCompat="@drawable/ic_img_placeholder"/>
            </com.google.android.material.card.MaterialCardView>
            <ImageView
                android:id="@+id/image2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:minWidth="64dp"
                android:minHeight="64dp"
                android:tint="@color/lightGrey"
                app:layout_constraintEnd_toStartOf="@+id/image3"
                app:layout_constraintStart_toEndOf="@+id/card1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_img_placeholder"
            />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:minWidth="64dp"
                android:minHeight="64dp"
                android:tint="@color/lightGrey"
                android:elevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/image4"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_img_placeholder"/>

            <ImageView
                android:id="@+id/image4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:minWidth="64dp"
                android:minHeight="64dp"
                android:tint="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_img_placeholder"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tittle1"
            style="@style/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/kind_of_animal"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvPhotos"
        />


        <tuppersoft.com.adoptme.features.view.CustomRadioAnimals
            android:id="@+id/customRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle1"/>


        <TextView
            android:id="@+id/tittle2"
            style="@style/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="32dp"
            android:text="@string/information"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customRadio"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            style="@style/custom_outlinebox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintEnd_toStartOf="@+id/tiAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiAge"
            style="@style/custom_outlinebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:minWidth="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle2">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="2"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tittle3"
            style="@style/fontBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="32dp"
            android:text="@string/sex"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiAge"
        />


        <tuppersoft.com.adoptme.features.view.CustomRadioSex
            android:id="@+id/customRadioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
