<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar"/>

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingEnd="20dp">

                    <TextView
                        style="@style/fontRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_data_name"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/fontRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/darkGrey"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingEnd="20dp">

                    <TextView
                        style="@style/fontRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_data_email"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvEmail"
                        style="@style/fontRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/darkGrey"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:id="@+id/llBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/fontRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_data_about_me"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvBirth"
                        style="@style/fontRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/darkGrey"
                        android:textSize="14sp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:tint="@color/darkGrey"
                    app:srcCompat="@drawable/ic_edit"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvZipCode"
                        style="@style/fontRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_data_postal_code"
                        android:textSize="14sp"/>

                    <EditText
                        android:id="@+id/etPostalCode"
                        style="@style/edittext_grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:enabled="false"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textSize="14sp"
                        android:theme="@style/appcolor_cursor"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivEditPostalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:tint="@color/darkGrey"
                    app:srcCompat="@drawable/ic_edit"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:id="@+id/llGender"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        style="@style/fontRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_data_gender"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvGender"
                        style="@style/fontRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/darkGrey"
                        android:textSize="14sp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:tint="@color/darkGrey"

                    app:srcCompat="@drawable/ic_edit"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/fontRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/personal_data_delete_user_title"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tvDeleteAccount"
                    style="@style/text_link_button_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/personal_data_delete_user_link"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>